Resolve "As a customer I want to view my strings"
