# backend/internal/core/ports/controller/impl/BaseControllerImpl.go
@@ -31,9 +31,9 @@ func CreateBaseStringController() *BaseStringControllerImpl {
 // - 400: ErrorDto
 // - 401: ErrorDto
 // - 422: ErrorDto
-func (g BaseStringControllerImpl) Create(w http.ResponseWriter, r *http.Request) {
+func (b BaseStringControllerImpl) Create(w http.ResponseWriter, r *http.Request) {
 	log.Printf("%s: start", tools.GetCurrentFuncName())
-	if user := utils.CheckUserIsActive(w, r, g.userService); user == nil {
+	if user := utils.CheckUserIsActive(w, r, b.userService); user == nil {
 		return
 	}
 	var baseString domain.BaseString
@@ -41,11 +41,40 @@ func (g BaseStringControllerImpl) Create(w http.ResponseWriter, r *http.Request)
 		utils.CreateErrorResponse(w, err, http.StatusUnprocessableEntity)
 		return
 	}
-	user, err := g.baseStringService.Create(baseString)
+	user, err := b.baseStringService.Create(baseString)
 	if err != nil {
 		utils.CreateErrorResponse(w, err, http.StatusBadRequest)
 		return
 	}
 	utils.CreateResponse(w, http.StatusCreated, user)
+	log.Printf("%s: end", tools.GetCurrentFuncName())
+}
+
+// swagger:route GET /baseStrings BaseStrings FindAllGroups
+// Return all baseStrings.
+//
+// Responses:
+// - 200: []BaseString
+// - 400: ErrorDto
+// - 401: ErrorDto
+// - 500: ErrorDto
+func (b BaseStringControllerImpl) FindAll(w http.ResponseWriter, r *http.Request) {
+	log.Printf("%s: start", tools.GetCurrentFuncName())
+	user := utils.CheckUserIsActive(w, r, b.userService)
+	if user == nil {
+		return
+	}
+	var baseStrings *[]domain.BaseString
+	var err error
+	if user.Admin {
+		baseStrings, err = b.baseStringService.FindAll()
+	} else {
+		baseStrings, err = b.baseStringService.FindByPermissions(user.Email)
+	}
+	if err != nil {
+		utils.CreateErrorResponse(w, err, http.StatusInternalServerError)
+		return
+	}
+	utils.CreateResponse(w, http.StatusOK, baseStrings)
 	log.Printf("%s: end", tools.GetCurrentFuncName())
 }
