# backend/swagger/swagger.json
@@ -18,6 +18,42 @@
   "basePath": "/",
   "paths": {
     "/baseStrings": {
+      "get": {
+        "tags": [
+          "BaseStrings"
+        ],
+        "summary": "Return all baseStrings.",
+        "operationId": "FindAllGroups",
+        "responses": {
+          "200": {
+            "description": "BaseString",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/BaseString"
+              }
+            }
+          },
+          "400": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          },
+          "401": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          },
+          "500": {
+            "description": "ErrorDto",
+            "schema": {
+              "$ref": "#/definitions/ErrorDto"
+            }
+          }
+        }
+      },
       "post": {
         "consumes": [
           "application/json"
